<?xml version="1.0"?>
<package format="2">
  <name>basestation_joy</name>
  <version>1.2.0</version>
  <description>ROS2 joy staick package</description>
  <maintainer email="jiahex@angdrew.cmu.edu">Jiahe Xu</maintainer>
  <license>BSD-3</license>
  <license>Public Domain</license>

  <url type="website">TBD</url>
  <url type="repository">TBD</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <!-- buildtool_depend>rosidl_default_generators</buildtool_depend -->

  <depend>rclcpp</depend>
  <!-- depend>rclcpp_components</depend -->
  <!-- depend>rmw_fastrtps_cpp</depend -->
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <!-- exec_depend>rosidl_default_runtime</exec_depend -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
